--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ x-django-env: &django-env
   OIDC_SECRET: "${OIDC_SECRET}"
   OIDC_PROVIDER_URL: "${OIDC_PROVIDER_URL}"
   OIDC_PROVIDER_NAME: NINA
+  DJANGO_AWS_ACCESS_KEY_ID: ${S3_ACCESS_KEY}
+  DJANGO_AWS_SECRET_ACCESS_KEY: ${S3_SECRET_KEY}
+  DJANGO_AWS_STORAGE_BUCKET_NAME: ${S3_BUCKET}
+  DJANGO_AWS_S3_ENDPOINT_URL: http://${HOSTNAME}:9090
 
 x-django-prod-env: &django-prod-env
   <<: *django-env
@@ -125,6 +129,19 @@ services:
   #     - 5173:5173
   #   volumes:
   #     - ./src/frontend/src:/app/src
+
+  minio:
+    image: quay.io/minio/minio
+    entrypoint: sh
+    command: -c 'mkdir -p /data/${S3_BUCKET} && minio server /data --console-address ":9091" --address ":9090"'
+    ports:
+      - 9090:9090
+      - 9091:9091
+    volumes:
+      - ./volumes/minio:/data
+    environment:
+      MINIO_ROOT_USER: ${S3_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY}
 
   kestra:
     image: kestra/kestra:latest
