--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,8 +144,7 @@ services:
       MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY}
 
   kestra:
-    image: kestra/kestra:latest
-    pull_policy: always
+    image: kestra/kestra:v0.21.3
     # Note that this setup with a root user is intended for development purpose.
     # Our base image runs without root, but the Docker Compose implementation needs root to access the Docker socket
     # To run Kestra in a rootless mode in production, see: https://kestra.io/docs/installation/podman-compose
