--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ DJANGO_SECRET_KEY=
 UBW_MSSQL=
 DOCKER_SOCKET_PATH=/var/run/docker.sock
 KESTRA_PASSWORD=
+AUTH_LDAP_SERVER_URI=
+AUTH_LDAP_BIND_DN=
+AUTH_LDAP_BIND_PASSWORD=
+AUTH_LDAP_USER_SEARCH_BASE=
+AUTH_LDAP_UID=
+AUTH_LDAP_USER_ATTR_MAP=
