--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [project]
-authors = [{name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}]
 dependencies = [
   "django>=5.1.6",
   "python-slugify>=8.0.1",
@@ -61,10 +60,12 @@ dependencies = [
   "django-view-breadcrumbs>=2.5.1",
   "django-auditlog>=3.0.0",
   "django-import-export>=4.3.7",
-  "sentry-sdk>=1.40.5"
+  "sentry-sdk>=1.40.5",
+  "django-autoslug>=1.9.9",
 ]
+authors = [{ name = "Niccolò Cantù", email = "niccolo.cantu@nina.no" }]
 description = "Add your description here"
-license = {text = "GPLv3"}
+license = { text = "GPLv3" }
 name = "dms"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -77,7 +78,7 @@ dev = [
   "pre-commit",
   "django-debug-toolbar",
   "django-extensions",
-  "ruff"
+  "ruff",
 ]
 ldap = ["python-ldap", "django-auth-ldap"]
 prod = ["gunicorn"]
@@ -87,7 +88,7 @@ test = [
   "pytest-django",
   "coverage",
   "factory-boy",
-  "django-coverage-plugin"
+  "django-coverage-plugin",
 ]
 
 [project.scripts]
@@ -160,7 +161,7 @@ generated-members = [
   "aq_parent",
   "[a-zA-Z]+_set{1,2}",
   "save",
-  "delete"
+  "delete",
 ]
 
 # ==== pytest ====
