--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ x-django-env: &django-env
   AUTH_LDAP_USER_SEARCH_BASE: ${AUTH_LDAP_USER_SEARCH_BASE}
   AUTH_LDAP_UID: ${AUTH_LDAP_UID}
   AUTH_LDAP_USER_ATTR_MAP: ${AUTH_LDAP_USER_ATTR_MAP}
+  SENTRY_DSN: ${SENTRY_DSN}
 
 x-django-prod-env: &django-prod-env
   <<: *django-env
