--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,8 @@ dependencies = [
   "django-autocomplete-light>=3.11.0",
   "django-view-breadcrumbs>=2.5.1",
   "django-auditlog>=3.0.0",
-  "django-import-export>=4.3.7"
+  "django-import-export>=4.3.7",
+  "sentry-sdk>=1.40.5"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
@@ -79,7 +80,7 @@ dev = [
   "ruff"
 ]
 ldap = ["python-ldap", "django-auth-ldap"]
-prod = ["gunicorn", "sentry-sdk>=1.40.5"]
+prod = ["gunicorn"]
 test = [
   "pytest",
   "pytest-sugar",
