--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [project]
+authors = [{name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}]
 dependencies = [
   "django>=5.1.6",
   "python-slugify>=8.0.1",
@@ -30,7 +31,7 @@ dependencies = [
   "django-countries-plus",
   "django-languages-plus",
   # auth
-  "django-allauth",
+  "django-allauth==65.5.0",
   "django-allauth-ui",
   # ui
   "django-crispy-forms",
@@ -62,10 +63,10 @@ dependencies = [
   "django-import-export>=4.3.7",
   "sentry-sdk>=1.40.5",
   "django-autoslug>=1.9.9",
+  "pyjwt[crypto]>=2.9.0"
 ]
-authors = [{ name = "Niccolò Cantù", email = "niccolo.cantu@nina.no" }]
 description = "Add your description here"
-license = { text = "GPLv3" }
+license = {text = "GPLv3"}
 name = "dms"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -78,7 +79,7 @@ dev = [
   "pre-commit",
   "django-debug-toolbar",
   "django-extensions",
-  "ruff",
+  "ruff"
 ]
 ldap = ["python-ldap", "django-auth-ldap"]
 prod = ["gunicorn"]
@@ -88,7 +89,7 @@ test = [
   "pytest-django",
   "coverage",
   "factory-boy",
-  "django-coverage-plugin",
+  "django-coverage-plugin"
 ]
 
 [project.scripts]
@@ -161,7 +162,7 @@ generated-members = [
   "aq_parent",
   "[a-zA-Z]+_set{1,2}",
   "save",
-  "delete",
+  "delete"
 ]
 
 # ==== pytest ====
