--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,8 @@ dependencies = [
   "django-import-export>=4.3.7",
   "sentry-sdk>=1.40.5",
   "django-autoslug>=1.9.9",
-  "pyjwt[crypto]>=2.9.0"
+  "pyjwt[crypto]>=2.9.0",
+  "django-jsonform>=2.23.2"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
