--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["hatchling"]
 [project]
 authors = [{name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}]
 dependencies = [
-  "django==5.1.6",
+  "django==5.2",
   "python-slugify>=8.0.1",
   "Pillow==11.1.0",
   "argon2-cffi",
@@ -70,7 +70,8 @@ dependencies = [
   "django-reversion>=5.1.0",
   "django-cotton>=2.0.3",
   "django-htmx>=1.23.0",
-  "duckdb>=1.2.2"
+  "duckdb>=1.2.2",
+  "pyarrow>=19.0.1"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
