--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
   "python-slugify>=8.0.1",
   "Pillow==11.1.0",
   "argon2-cffi",
-  "psycopg[binary]>=3.2.4",
+  "psycopg[binary,pool]>=3.2.4",
   "backoff",
   "requests",
   # django-utils
