feat: csw records generation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ x-django-env: &django-env
   OIDC_SECRET: "${OIDC_SECRET}"
   OIDC_PROVIDER_URL: "${OIDC_PROVIDER_URL}"
   OIDC_PROVIDER_NAME: NINA
-  DJANGO_AWS_ACCESS_KEY_ID: ${S3_ACCESS_KEY}
-  DJANGO_AWS_SECRET_ACCESS_KEY: ${S3_SECRET_KEY}
-  DJANGO_AWS_STORAGE_BUCKET_NAME: ${S3_BUCKET}
-  DJANGO_AWS_S3_ENDPOINT_URL: http://${HOSTNAME}:9090
+  DJANGO_AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+  DJANGO_AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+  DJANGO_AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME}
+  DJANGO_AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL}
   AUTH_LDAP_SERVER_URI: ${AUTH_LDAP_SERVER_URI}
   AUTH_LDAP_BIND_DN: ${AUTH_LDAP_BIND_DN}
   AUTH_LDAP_BIND_PASSWORD: ${AUTH_LDAP_BIND_PASSWORD}
@@ -22,6 +22,8 @@ x-django-env: &django-env
   AUTH_LDAP_UID: ${AUTH_LDAP_UID}
   AUTH_LDAP_USER_ATTR_MAP: ${AUTH_LDAP_USER_ATTR_MAP}
   SENTRY_DSN: ${SENTRY_DSN}
+  AWS_REQUEST_CHECKSUM_CALCULATION: WHEN_REQUIRED
+  AWS_RESPONSE_CHECKSUM_VALIDATION: WHEN_REQUIRED
 
 x-django-prod-env: &django-prod-env
   <<: *django-env
