--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,10 @@ dependencies = [
   "lxml>=5.3.1",
   "xmltodict>=0.14.2",
   "fsspec>=2025.3.2",
-  "aiohttp>=3.11.16"
+  "aiohttp>=3.11.16",
+  "pyarrow>=20.0.0",
+  "s3fs>=2025.3.2",
+  "pydantic>=2.11.4"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
