--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,8 @@ dependencies = [
   "aiohttp>=3.11.16",
   "pyarrow>=20.0.0",
   "s3fs>=2025.3.2",
-  "pydantic>=2.11.4"
+  "pydantic>=2.11.4",
+  "duckdb>=1.2.2"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
