--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       DJANGO_COLLECTSTATIC: 1
       DJANGO_MIGRATE: 1
       CONN_MAX_AGE: 0
-      # INSTALL_CERTS: 1
+      # LDAP_CA_FILE_PATH:
     volumes:
       - statics:/app/staticfiles
       # - ./certs/:/usr/local/share/ca-certificates/
