--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,9 @@ dependencies = [
   "pyarrow>=20.0.0",
   "s3fs>=2025.3.2",
   "pydantic>=2.11.4",
-  "duckdb>=1.2.2"
+  "duckdb>=1.2.2",
+  "fiona[s3]>=1.10.1",
+  "rasterio>=1.4.3"
 ]
 description = "Add your description here"
 license = {text = "GPLv3"}
@@ -200,3 +202,6 @@ select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
 [tool.ruff.lint.per-file-ignores]
 "**/migrations/*.py" = ["E501", "ANN"]
 "**/tests/*.py" = ["S101"]
+
+[tool.uv]
+no-binary-package = ["fiona"]
