--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
   "djangorestframework-simplejwt",
   # gis
   "pygeometa @ git+https://github.com/nicokant/pygeometa@gbif-eml#egg=pygeometa",
-  "gdal==3.11.2",
+  # "gdal==3.11.2",
   "pyproj",
   # queue
   "procrastinate[django]>=3.0.0",
