--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
         run: docker compose --profile dev build
 
       - name: Run DB Migrations
-        run: docker compose --profile dev run --rm django-dev manage.py migrate
+        run: docker compose --profile dev run --rm django-dev uv run manage.py migrate
 
       - name: Check openapi spec
-        run: docker compose --profile dev run --rm django-dev manage.py spectacular --validate
+        run: docker compose --profile dev run --rm django-dev uv run manage.py spectacular --validate
 
       - name: Run Django Tests
         run: docker compose --profile dev run django-dev uv run pytest src
