--- a/src/dms/frontend/package.json
+++ b/src/dms/frontend/package.json
@@ -5,39 +5,44 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "check": "tsc -b",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css}\""
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.5",
     "@headlessui/react": "^2.2.9",
     "@tanstack/react-form": "^1.23.7",
     "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
+    "@tisoap/react-flow-smart-edge": "^4.0.1",
+    "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-select": "^5.10.2",
-    "zustand": "^5.0.8",
-    "reselect": "^5.1.1"
+    "reselect": "^5.1.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@types/css-modules": "^1.0.5",
+    "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@types/node": "^24.7.2",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.37.0",
-    "@eslint/js": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.23",
-    "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2",
     "globals": "^15.15.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.1",
     "vite": "^7.1.9"
