--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,10 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+[*.{js,jsx,ts,tsx}]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
