--- a/src/dms/frontend/package.json
+++ b/src/dms/frontend/package.json
@@ -19,6 +19,11 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "@tisoap/react-flow-smart-edge": "^4.0.1",
+    "@uppy/aws-s3": "^5.0.2",
+    "@uppy/core": "^5.1.1",
+    "@uppy/dashboard": "^5.0.4",
+    "@uppy/react": "^5.1.1",
+    "@uppy/status-bar": "^5.0.2",
     "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
