--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
   "procrastinate[django]>=3.0.0",
   "setuptools>=75.8.0",
   "django-storages[s3]>=1.14.5",
+  "boto3>=1.40.4",
   "django-taggit>=6.1.0",
   "django-autocomplete-light>=3.11.0",
   "django-view-breadcrumbs>=2.5.1",
