--- a/src/dms/frontend/package.json
+++ b/src/dms/frontend/package.json
@@ -24,6 +24,7 @@
     "@uppy/dashboard": "^5.0.4",
     "@uppy/react": "^5.1.1",
     "@uppy/status-bar": "^5.0.2",
+    "@uppy/tus": "^5.0.2",
     "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
