--- a/.github/workflows/duckui.yml
+++ b/.github/workflows/duckui.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           # TODO: replace once the PR is merged
           repository: nicokant/duck-ui
+          persist-credentials: false
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
