--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ x-django-env: &django-env
   DATASETS_TITILER_URL: ${DATASETS_TITILER_URL:-/titiler}
   DJANGO_ALLOWED_HOSTS: "localhost,django,${HOSTNAME:-}"
   DATASETS_NINA_MAP_PREVIEW: ${DATASETS_NINA_MAP_PREVIEW:-}
+  DATASETS_DUCKUI_URL: ${DATASETS_DUCKUI_URL:-https://duckui.nina.no}
   FASTDOC_CONVERT_API_URL: http://fastdoc:8000/convert
 
 x-django-prod-env: &django-prod-env
@@ -246,14 +247,3 @@ services:
       - "traefik.http.routers.tusd.entrypoints=web"
       - "traefik.http.routers.tusd.priority=20"
       - "traefik.http.services.tusd.loadbalancer.server.port=8080"
-
-  duckui:
-    image: ghcr.io/ninanor/dms/duckui:sha-45e1b29
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.duckui.rule=PathPrefix(`/duckui/`)"
-      - "traefik.http.routers.duckui.entrypoints=web"
-      - "traefik.http.routers.duckui.priority=50"
-      - "traefik.http.services.duckui.loadbalancer.server.port=5522"
-      - "traefik.http.routers.duckui.middlewares=duckui-stripprefix"
-      - "traefik.http.middlewares.duckui-stripprefix.stripprefix.prefixes=/duckui"
