--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,7 +56,12 @@ repos:
   #     - id: detect-secrets
   #       args: [--exclude-files=src/dms/users/fixtures/users.json]
 
-
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: 'v4.3.0'
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: []
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
