chg: add rustfs for development

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,17 @@
 POSTGRES_PASSWORD=postgres
 DJANGO_SECRET_KEY=secret
+
+# in case your can edit /etc/hosts:
+# add this domain `rustfs.localhost` to your /etc/hosts
+# otherwise, set the hostname of your computer
+# this is necessary to ensure DNS resolution outside docker
+# localhost would be resolved to the container internal host
+# ignore this variable if you plan to use an external s3 bucket
+RUSTFS_HOSTNAME=rustfs.local
+
+# the AWS_S3_ENDPOINT must be resolvable both by your browser and docker
+# if using the dev bucket (rustfs) set this to the same host as RUSTFS_HOSTNAME
+AWS_S3_ENDPOINT_URL=http://rustfs.local:8000
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_STORAGE_BUCKET_NAME=dms
