--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ ldap = ["python-ldap", "django-auth-ldap"]
 prod = ["gunicorn", {include-group = "ldap"}, {include-group = "gis"}]
 test = [
   "pytest",
+  "pytest-cov",
   "pytest-sugar",
   "pytest-django",
   "coverage",
@@ -112,8 +113,8 @@ dms = "dms.manage:main"
 
 # ==== Coverage ====
 [tool.coverage.run]
-include = ["metadata_dmsue/**"]
-omit = ["*/migrations/*", "*/tests/*"]
+include = ["dms/**"]
+omit = ["*/migrations/*", "*/tests/*", "*/node_modules/*", "*/*.html", "*/dms/core/settings/*", "*/wsgi.py"]
 plugins = ["django_coverage_plugin"]
 
 [tool.django-stubs]
@@ -186,7 +187,7 @@ generated-members = [
 
 # ==== pytest ====
 [tool.pytest.ini_options]
-addopts = "--ds=dms.core.settings.test --reuse-db"
+addopts = "--ds=dms.core.settings.test --reuse-db --cov=dms --cov-report xml:media/cov.xml"
 minversion = "6.0"
 python_files = ["tests.py", "test_*.py"]
 
@@ -267,6 +268,3 @@ ignore_token_for_push = false
 insecure = false
 name = "origin"
 type = "github"
-
-[tool.uv]
-no-binary-package = ["fiona"]
