--- a/src/dms/frontend/pnpm-workspace.yaml
+++ b/src/dms/frontend/pnpm-workspace.yaml
@@ -2,5 +2,6 @@ overrides:
   devalue@>=5.1.0 <5.6.2: '>=5.6.2'
   devalue@>=5.3.0 <=5.6.1: '>=5.6.2'
   js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
+  lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
   preact@>=10.27.0 <10.27.3: '>=10.27.3'
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
