--- a/src/dms/frontend/pnpm-workspace.yaml
+++ b/src/dms/frontend/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 overrides:
+  axios@<=1.13.4: '>=1.13.5'
   devalue@>=5.1.0 <5.6.2: '>=5.6.2'
   devalue@>=5.3.0 <=5.6.1: '>=5.6.2'
   js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
