--- a/src/dms/frontend/pnpm-workspace.yaml
+++ b/src/dms/frontend/pnpm-workspace.yaml
@@ -1,8 +1,11 @@
 overrides:
+  ajv@<8.18.0: '>=8.18.0'
   axios@<=1.13.4: '>=1.13.5'
+  devalue@<=5.6.2: '>=5.6.3'
   devalue@>=5.1.0 <5.6.2: '>=5.6.2'
   devalue@>=5.3.0 <=5.6.1: '>=5.6.2'
   js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
   lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
+  minimatch@<10.2.1: '>=10.2.1'
   preact@>=10.27.0 <10.27.3: '>=10.27.3'
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
